--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,3 +1,14 @@
+@misc{Bounty, 
+author = {}, 
+title = {{The Bounty Network}}, 
+url = {\url{https://bounties.network/}},
+}
+
+@misc{ERC20, 
+author = {}, 
+title = {{EIP 20: ERC-20 Token Standard}}, 
+url = {\url{https://eips.ethereum.org/EIPS/eip-20}},
+}
 @misc{Gitcoin, 
 author = {}, 
 title = {{Gitcoin}}, 
