introducing the problem

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -47,13 +47,9 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 %
 \section{Introduction}
-From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system 'Bitcoin' \cite{Bitcoin}, blockchain technology has spread far beyond the sole cryptocurrency domain, in particular after the implementation of a general purpose smart contract functionality introduced by Ethereum. 
-Besides a growing number of applications ranging from business, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a 'game changer' in outdated and broken scientific practices and leading towards Open Science \cite{AES}. In particular, a 'blockchainified science'\cite{BlockchainforScience} could 'reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step the research cycle to 'scientific self-correction' way before the final publication step and therefore help fixing the current reproducibility crisis in science. The intrinsic characteristics of blockchain technology (decentralization, for which there are no trusted third parties; cryptographic hashing and timestamping, that create a digital footprint able to keep a traceable chronological record of research objects; immutability or append-only, for which data cannot be altered or retrieved) set the basis for a collaborative open science infrastructure \cite{ReviewBlockchain2019}.
-
-
-
-
-
+From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system Bitcoin \cite{Bitcoin}, blockchain technologies (BCTs) have spread far beyond the sole cryptocurrency domain, in particular after the implementation of a general purpose smart contract functionality introduced by Ethereum \cite{Ethereum-Wood}.
+Besides a growing number of applications ranging from business, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a 'game changer' in outdated and broken scientific practices and leading towards Open Science \cite{AES}. In particular, a 'blockchainified science'\cite{BlockchainforScience} could 'reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step the research cycle to 'scientific self-correction' way before the final publication step and therefore help fixing the current reproducibility crisis in science. Finally, scholars have pointed out how the intrinsic characteristics of blockchain technology (decentralization, for which there are no trusted third parties; cryptographic hashing and timestamping, that create a digital footprint able to keep a traceable chronological record of research objects; immutability or append-only, for which data cannot be altered or retrieved) set the basis for a open science infrastructure \cite{ReviewBlockchain2019} where decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers).
+A thorny issue in the academic system that can be tackled by blockchain concerns the status and accreditation of peer-review, the core process of scientific validation currently facing a crisis. In this paper we propose a solution to the problem of reviewers recognition based on the principles of token economy.
 The paper is structured as follows. Sections 2 presents research background and related works. Section 3 explains the proposed Ethereum-based protocol illustrating the system architecture and the current status of implementation. In Sect. 4 we discuss the implication of our work. Section 5 contains the conclusions. Appendixes present the smart contracts. 
 
 \section{Background}
@@ -104,9 +100,6 @@ Rubriq provides independent and standardized peer review that can be accepted an
 \emph{I8X Platform}
 A more comprehensive reform of academic endorsement has been proposed in the manifesto ‘Towards Open Science:The Case for a Decentralized Autonomous Endorsement System11’, published anonymously.The author(s) propose a new academic endorsement system that is not based on current journal publication practices which are argued to be expensive, slow, disregard non-traditional output and negative results, and which give too much power to editors and publishers. Built on the blockchain, the Academic Endorsement System (AES) is based on a new form of currency, coined academic endorsement points (AEP), which can be used by scientists to reward scientific work that is worthy of endorsement. Moreover, the amount of AEP credited to a scientist is based on the AEP received for previous work. Researchers whose output has been endorsed to a high degree will have a larger influence in the community. Any kind of research output could be endorsed, for example blog posts, data sets, software etc.Another advantage is that this system would be faster than the time it takes for citation metrics to accrue.
 The startup Matryx.ai13 aims to transform the nature of research collaboration itself. Its initiators claim that one of the problems with current scientific practices is its incentive structure. Scientific awards, for example, are based on competition rather than on collaboration, despite the fact that new ideas are usually collaborative in nature. Moreover, different researchers and research groups are often working on the same problems, wasting, as they claim on their website,‘brain power’, time and money. Matryx intends to provide a platform enabling and incentivising research collaboration while discouraging solitary and siloed research. On Matryx, a research project starts when users set a bounty on a problem that they want the community to solve. Contributors solve these problems by working with each other on the platform.The collaboration is tracked through the blockchain thus ensuring contributors are credited appropriately when the problem is solved. In principle, everyone can contribute in the collaboration: scientists, PhD students and even enthusiastic amateurs.
-
-
-\subsection{Ideas here}
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on a distributed platform that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
@@ -189,7 +182,7 @@ AntsReviewRoles[\ref{appendix:a}], to ensure integrity of the system, implements
 \newline The AntReview after being validated is then accepted by the Issuer and paid equally between Peer-Reviewers.
 \newline Also, the Issuer can cancel the AntReview at any time and withdraw the amount of ether staked.
 \newline One of the key aspects of the protocol is the concept of Proof of Existence, introduced by Stuart Haber \& W. Scott Stornetta with the paper "How to time-stamp a digital document"\cite{TimeStamp-Haber}
-\newline As the pioneers of blockchain an cited by Bitcoin whitepaper, they were in a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin\cite{Bitcoin} as its first application.
+\newline As the pioneers of blockchain an cited by Bitcoin whitepaper, they were in a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin \cite{Bitcoin} as its first application.
 \newline In Ethereum \cite{Ethereum} the concept of immutability is achieved via the blockchain and proof of work consesus algorithm by a chain of timestamped block hashes that are secured by miners competing computations.
 \newline AntsReview is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree \cite{BayerHaber1992} to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
 \newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree containing representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending with a single root hash.
@@ -223,11 +216,11 @@ The Anonymity of an agent in the system is achieved in two ways:
  Externally Owned Accounts (EOA) in Ethereum are controlled by private keys, are 20 bytes long and have no code. An user can send messages from an externally owned account by creating and signing a transaction.
 \newline The limitation of such solution regarding the Privacy of the Protocol is due to the fact that blockchain and transactions are public so anyone can see the details of a transaction, browsing a block explorer like Etherscan, and also they're subjected to data mining to extract value and identify users in the blockchain.
 \newline To avoid that, AntsReview will implement zkAnt, an Ant token wrapped into AZTEC Protocol, where leveraging on zkSNARKS, and PLONK in the future, will allow private transactions in the system to maintain the privacy and anonimity of Peer-Reviewers.
-\newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses ZK-SNARKS to validate encrypted transactions.
+\newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses a series of zero-knowledge proofs (ZK-SNARKs) and homomorphic encryption to validate encrypted transactions.
 \newline ZK-SNARKs (Zero-Knowledge Succinct Non-Interactive Argument of Knowledge) \cite{ZKSNARKs} refers to a proof construction where one can prove possession of certain information, like a secret key, without revealing that information, and without any interaction between prover and verifier.
-\newline Zero-Knowledge \cite{ZeroKnoledge} proofs allow an actor (prover) to prove to another (verifier) that a statement is true, without revealing any information apart from the validity of the statement itself.
+\newline Zero-Knowledge \cite{ZeroKnoledge} proof is a mathematical cryptographic method that through values permutations allow one party (the prover) to prove to another (the verifier) the validity of a statement, without revealing the statement itself.
 \newline Future developments will investigate viable solutions, for scaling the system, like ZK-Rollups by AZTEC Protocol, one of the options being developed for a type of layer 2 construction that runs on top of Ethereum to improve scalability. This will enable to run smart contracts at scale with quasi-instant transactions while still being secured by Ethereum.
-\subsubsection{Privacy/anonymity}. To enhance the peer-reviewer's privacy, we would like to implement zkANT, an ERC20 token, Ant, wrapped into AZTEC Protocol ZK-SNARKs, a non-interactive type of zero-knowledge privacy protocol to enable private transactions on Ethereum. Zero-knowledge proof is a mathematical cryptographic method that through values permutations allows one party (the prover) to prove to another (the verifier) the veracity of a statement, without having to reveal what the statement is. We will use ZK-SNARKs (which stands for “Zero-Knowledge Succinct Non-Interactive Argument of Knowledge”) via the open source libraries of AZTEC protocol. AZTEC, now TURBOPLONK bla bla (faster?) combines the confidentiality of the transactions (the value of the transaction is hidden, the amount of token (?) is not revealed thus preventing biases in the peer-review quadratic voting process = "I want to bet on this review because I want to win the bounty") with general-purpose computation (it's a Turing-complete Virtual Machine): this means transaction are not limited just to the local cryptocurrency (in our case ANT) but cross-asset trades are allowed (I can exchange ANT tokesn with other crypto-currencies).
+
 \section{Discussions}
 \subsection{A new community-driven standard?}
 - a change is already happening: specially new born publishers are opening up review process (BioMed Central, ELife, Frontiers, PeerJ, F1000 Research) -- from 2020 also Nature declared that will do the same.
